# ceokoroji-portfolio

./: .dockerignore  .eslintrc.json  .gitignore  Cargo.toml  Dockerfile  Makefile  NEW_README.md  README.md  components.json  contentlayer.config.ts  docker-compose.yml  drizzle.config.ts  index.html  make-migrations.sh  next.config.mjs  nginx.conf  nixpacks.toml  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tsconfig.app.json  tsconfig.json  vite.config.ts
.contentlayer/: package.json
.github/workflows/: migrate.yml
.zed/: debug.json
api/: Cargo.toml
api/migrations/: 20251123153526_initialize_tables.up.sql  20251209002433_add-order.up.sql
api/src/: config.rs  db.rs  error.rs  generate_hash.rs  main.rs  openapi.rs  rate_limiter.rs  routes.rs
api/src/handlers/: auth.rs  contact.rs  mod.rs  posts.rs  projects.rs  repositories.rs
api/src/middleware/: auth.rs  rate_limit.rs
api/src/schemas/: contact.rs  mod.rs  post.rs  project.rs  repository.rs
backend/: Cargo.toml
backend/migrations/: 001_create_posts.sql
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/handlers/: contact.rs  mod.rs  posts.rs
backend/src/models/: contact.rs  mod.rs  post.rs
drizzle/: 0000_funny_mimic.sql  0000_large_vulture.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
frontend/: index.html  package.json  tsconfig.json
frontend/src/: App.svelte  app.css  app.html
migrations/: 20251123153526_initialize_tables.down.sql  20251123153526_initialize_tables.up.sql  20251209002433_add-order.down.sql
posts/: demystifying-seo.mdx  first-blog-post.mdx  how-to-choose-a-tech-stack.mdx  how-to-communicate-with-developers.mdx  mdx-test.mdx  middleware.mdx
prisma/: schema.prisma
src/: App.svelte  app.css  app.html  constants.rs  db.rs  env.mjs  error.rs  main.rs  middleware.ts  openapi.rs  rate_limiter.rs  routes.rs
src/app/: error.tsx  head.tsx  layout.tsx  page.tsx
src/components/: Alert.tsx  Footer.tsx  Navbar.svelte  app-sidebar.svelte  blog-card.svelte  filter.svelte  filter.tsx  github-badge.svelte  github-badge.tsx  logo.svelte  logo.tsx  markdown-editor.svelte  navbar.svelte  post-view.svelte  post-view.tsx  project-card.svelte  resume-button.svelte  resume-button.tsx  share-links.svelte
src/contexts/: ModalContext.tsx  alert-context.tsx  app-context.tsx  (+1 more)
static/: manifest.json
supabase/: config.toml
ui/: package.json  svelte.config.js  vite.config.ts
(+261 files in other folders)
