[package]
name = "ceokoroji-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-web = "4.11.0"
argon2 = "0.5.3"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
lettre = "0.11.19"
rand = "0.9.2"
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-macros = "0.2.0-alpha.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
lto = false
codegen-units = 1

# [[bin]]
# name = "generate_hash"
# path = "src/generate_hash.rs"

# [[bin]]
# name = "api"
# path = "src/main.rs"
